--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#ffffff" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Explain it to me. Simply." />
+    <!-- <meta name="description" content="Explain it to me. Simply." /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Explain AI</title>
+    <!-- <title>Explain AI</title> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
