--- a/web/public/index.html
+++ b/web/public/index.html
@@ -12,7 +12,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="title" content="Explain AI" data-react-helmet="true" />
-    <meta name="description" content="Explain it to me. Simply." data-react-helmet="true" />
+    <meta
+      name="description"
+      content="Explain it to me. Simply. (index.html)"
+      data-react-helmet="true"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
