--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,7 +11,6 @@
     <meta name="theme-color" content="#ffffff" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="title" content="Explain AI" data-react-helmet="true" />
     <meta
       name="description"
       content="Explain it to me. Simply. (index.html)"
@@ -31,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!-- <title>Explain AI</title> -->
+    <title>Explain AI (index.html)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
