--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,11 +11,11 @@
     <meta name="theme-color" content="#ffffff" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
+    <!-- <meta
       name="description"
       content="Explain it to me. Simply. (index.html)"
       data-react-helmet="true"
-    />
+    /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
