Added canonical href in topicpage

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -33,7 +33,7 @@
     <title>Explain AI (index.html)</title>
     <meta property="og:title" content="Explain AI (index.html)" data-react-helmet="true" />
     <meta property="og:description" content="Home Page" data-react-helmet="true" />
-    <link rel="canonical" href="https://deploy-preview-118--explain-ai.netlify.app/javascript" />
+    <!-- <link rel="canonical" href="https://deploy-preview-118--explain-ai.netlify.app/" /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
