Removed title and desc from index.html
Co-Authored-By: yuna-iwata <115478706+yuna-iwata@users.noreply.github.com>

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -31,8 +31,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Explain AI (index.html)</title>
-    <meta property="og:title" content="Explain AI (index.html)" data-react-helmet="true" />
-    <meta property="og:description" content="Home Page" data-react-helmet="true" />
+    <!-- <meta property="og:title" content="Explain AI (index.html)" data-react-helmet="true" />
+    <meta property="og:description" content="Home Page" data-react-helmet="true" /> -->
     <!-- <link rel="canonical" href="https://deploy-preview-118--explain-ai.netlify.app/" /> -->
   </head>
   <body>
